--- a/assets/style.css
+++ b/assets/style.css
@@ -10,9 +10,8 @@ body {
 }
 
 ul {
-    list-style-type: square;
     margin: 0;
-    padding: 0;
+    padding: 2px;
     overflow: hidden;
     background-color: #333;
 }
@@ -29,13 +28,13 @@ ul {
     text-decoration: none;
   }
   
-  /* Change the link color to #111 (black) on hover */
+
 li a:hover {
     background-color: #111;
   }
 nav a {
     float: left;
-    color: #f2f2f2
+    color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration:none;
@@ -49,8 +48,8 @@ nav a:hover {
 }
 
 nav a.active {
-    background-color: #04aa6d
-    color: white;
+    background-color: #04aa6d;
+        color: white;
 }
 
 .hero {
@@ -60,25 +59,21 @@ nav a.active {
 }
 
 .hero-text {
-    text-align: center;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%)
     color: white;
 }
 
 .projects {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 90%;
     height: 100hv;
     margin: auto;
-    border-style:solid
+    border-style:solid;
     border-width: 2px;
-    float: left;
-    color: #f2f2f2
+    color: #f2f2f2;
     font-size: 17px;
 }
 
@@ -89,8 +84,9 @@ nav a.active {
     width: 90%;
     height: 100hv;
     margin: auto;
-    border-style:solid
+    border-style:solid;
     border-width: 2px;
+    padding: 2px
 }
 
 .card header {
@@ -98,6 +94,10 @@ nav a.active {
     background: #13293d;
     color: #fff;
     text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    
 }
 
 .card img {
@@ -108,6 +108,6 @@ nav a.active {
     width: 90%;
     height: 100hv;
     margin: auto;
-    border-style:solid
+    border-style:solid;
     border-width: 2px;
 }
