--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,5 @@
 * {
-    box-sizing: border-box;
-    background-color: darkmagenta;
+    background-color: rgb(242, 154, 242);
 }
 
 body {
@@ -61,6 +60,7 @@ nav a.active {
 .hero-text {
     position: absolute;
     color: white;
+    padding: 10px;
 }
 
 .projects {
@@ -84,9 +84,9 @@ nav a.active {
     width: 90%;
     height: 100hv;
     margin: auto;
-    border-style:solid;
     border-width: 2px;
     padding: 2px
+    box-shadow: 5px 10px 8px #888888;
 }
 
 .card header {
