--- a/assets/style.css
+++ b/assets/style.css
@@ -58,7 +58,7 @@ nav a.active {
 }
 
 .hero-text {
-    position: absolute;
+    position: relative;
     color: white;
     padding: 10px;
 }
@@ -111,3 +111,19 @@ nav a.active {
     border-style:solid;
     border-width: 2px;
 }
+
+@media screen and (max-width: 992px) {
+    section {
+      width: 90%;
+    }
+}
+@media screen and (max-width: 768px) {
+        section {
+          width: 95%;
+        }
+    }
+@media screen and (max-width: 500px) {
+        section {
+          width: 99%;
+        }
+    }
