--- a/assets/style.css
+++ b/assets/style.css
@@ -77,40 +77,12 @@ nav a.active {
     font-size: 17px;
 }
 
-.card {
+.container img {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 90%;
-    height: 100hv;
-    margin: auto;
-    border-width: 2px;
-    padding: 2px
-    box-shadow: 5px 10px 8px #888888;
+    flex-wrap: wrap;
 }
 
-.card header {
-    padding: 20px;
-    background: #13293d;
-    color: #fff;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    
-}
 
-.card img {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 90%;
-    height: 100hv;
-    margin: auto;
-    border-style:solid;
-    border-width: 2px;
-}
 
 @media screen and (max-width: 992px) {
     section {
