--- a/assets/style.css
+++ b/assets/style.css
@@ -28,12 +28,12 @@ ul {
   }
   
 
-li a:hover {
+ul a:hover {
     background-color: #111;
   }
 nav a {
     float: left;
-    color: #f2f2f2;
+    color: #9bf4d3;
     text-align: center;
     padding: 14px 16px;
     text-decoration:none;
@@ -42,14 +42,10 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #ddd;
+    background-color: #9bf4d3;
     color: black;
 }
 
-nav a.active {
-    background-color: #04aa6d;
-        color: white;
-}
 
 .hero {
     height: 50;
@@ -74,14 +70,22 @@ nav a.active {
     border-style:solid;
     border-width: 2px;
     color: #f2f2f2;
-    font-size: 17px;
+    font-size: 20px;
 }
+
+
+    
 
 .container img {
     display: flex;
     flex-wrap: wrap;
 }
 
+.container .value-column{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
 
 
 @media screen and (max-width: 992px) {
