--- a/assets/style.css
+++ b/assets/style.css
@@ -4,10 +4,9 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-
-}
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+ }
 
 ul {
     margin: 0;
@@ -20,6 +19,10 @@ ul {
     float: left;
   }
   
+  li {
+    float: left;
+  }
+
   li a {
     display: block;
     color: white;
@@ -32,6 +35,7 @@ ul {
 ul a:hover {
     background-color: #111;
   }
+
 nav a {
     float: left;
     color: #9bf4d3;
@@ -60,39 +64,29 @@ nav a:hover {
     padding: 10px;
 }
 
-.projects {
+main {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    width: 90%;
-    height: 100hv;
-    margin: auto;
-    border-style:solid;
-    border-width: 2px;
-    color: #f2f2f2;
-    font-size: 17px;
+
+}
+
+section {
+    width: 75%;
+    margin-bottom: 50px;
+}
+
+section img {
+    width: 100%;
 }
 
 
-
-.container img {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.container .value-column{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-}
-
-.footer {
+footer {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: red;
+  background-color: rgb(255, 0, 195);
   color: white;
   text-align: center;
 }
